// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagonalTopLeftLine Component should match the snapshot with a winner 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "red",
      "borderRadius": 10,
      "height": 0,
      "left": 20,
      "opacity": 0,
      "position": "absolute",
      "transform": [
        {
          "translateX": -50,
        },
        {
          "translateY": -10,
        },
        {
          "rotate": "45deg",
        },
        {
          "translateX": 50,
        },
        {
          "translateY": 10,
        },
        {
          "translateY": 0,
        },
      ],
      "width": 100,
    }
  }
  testID="DiagonalTopLeftLine"
/>
`;

exports[`DiagonalTopLeftLine Component should match the snapshot without a winner 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "blue",
      "borderRadius": 10,
      "height": 0,
      "left": 10,
      "opacity": 0,
      "position": "absolute",
      "transform": [
        {
          "translateX": -100,
        },
        {
          "translateY": -5,
        },
        {
          "rotate": "45deg",
        },
        {
          "translateX": 100,
        },
        {
          "translateY": 5,
        },
        {
          "translateY": 0,
        },
      ],
      "width": 200,
    }
  }
  testID="DiagonalTopLeftLine"
/>
`;
